correction bug pie chart legend avec dark mode

--- a/index.scss
+++ b/index.scss
@@ -1318,7 +1318,7 @@ body {
 #darkmode-toggle {
   cursor: pointer; /* Change le curseur en forme de main */
   text-decoration: none; /* Supprime le soulignement par défaut */
-  color: #1EE2E7; /* Change la couleur du texte pour qu'elle soit visible */
+  color: #1ee2e7; /* Change la couleur du texte pour qu'elle soit visible */
   transition: all 0.3s; /* Animation douce pour le changement de couleur */
 }
 
@@ -1376,8 +1376,6 @@ body {
     background-color: #bb86fc;
   }
 
-
-
   .btn-primary:hover,
   .btn-primary:focus,
   .btn-primary:active,
@@ -1413,7 +1411,6 @@ body {
     color: #bb86fc;
   }
 
-
   .profile-photo {
     box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
   }
@@ -1432,11 +1429,11 @@ body {
   section#contact .form-group input.form-control {
     background-color: #333;
   }
-  
+
   section#contact .form-group textarea.form-control {
     background-color: #333;
   }
-  
+
   footer {
     background-color: #1e1e1e;
   }
@@ -1465,18 +1462,6 @@ body {
     background-color: #e0e0e0;
   }
 
-  .chart-container .pie-chart .max-circ {
-    background: #333;
-  }
-
-  .chart-container .pie-chart .legend li {
-    background: rgba(255, 255, 255, 0.1);
-    color: #e0e0e0;
-  }
-
-  .chart-container .pie-chart .legend li:hover {
-    background: rgba(255, 255, 255, 0.2);
-  }
 }
 #portfolio .portfolio-item .portfolio-caption {
   background-color: #505050;
